Fixing bug 352760, [10.3] Safari no longer special-cased (hidden) when default reader. Patch by Stuart Morgan <stuart.morgan@alumni.case.edu>. r=smokey, sr=smfr